--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,14 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+jobs:
+  build:
+    docker:
+      - image: circleci/node:9.5-browsers
+    steps:
+      - checkout
+      - run: 
+          name: Install
+          command: npm install
+      - run:
+          name: Run Tests
+          command: npm test
+
