--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:9.5-browsers
+      - image: circleci/node:latest-browsers
     steps:
       - checkout
       - run: 
