--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,38 @@
 version: 2.1
+
+orbs:
+  aws-s3: circleci/aws-s3@x.y
+
 jobs:
-    run-task:
-        docker:
-            - image: circleci/node:latest-browsers
-        steps:
-            - checkout
-            - run: 
-                name: Install
-                command: npm install
-            - run:
-                name: Run Tests
-                command: npm test
+  run-task:
+    docker:
+      - image: circleci/node:latest-browsers
+    steps:
+      - checkout
+      - run: 
+        name: Install
+        command: npm install
+      - run:
+        name: Run Tests
+        command: npm test
 
 workflow:
-    build:
-        jobs:
-            - run-task
-#             - aws-s3/sync:
-#                 arguments: |
-#                   --acl public-read \
-#                   --cache-control "max-age=86400"
-#                 aws-access-key-id: ${AWS_ACCESS_KEY_ID}
-#                 aws-region: ${AWS_REGION}
-#                 aws-secret-access-key: ${AWS_SECRET_ACCESS_KEY}
-#                 from: bucket
-#                 overwrite: true
-#                 to: 's3://angular-cloudfront-test/prefix'
-#             - aws-s3/copy:
-#                 arguments: '--dryrun'
-#                 from: bucket/build_asset.txt
-#                 to: 's3://angular-cloudfront-test'
+  build:
+    jobs:
+      - run-task
+      - aws-s3/sync:
+        arguments: |
+          --acl public-read \
+          --cache-control "max-age=86400"
+        aws-access-key-id: ${AWS_ACCESS_KEY_ID}
+        aws-region: ${AWS_REGION}
+        aws-secret-access-key: ${AWS_SECRET_ACCESS_KEY}
+        from: bucket
+        overwrite: true
+        to: 's3://angular-cloudfront-test/prefix'
+      - aws-s3/copy:
+        arguments: '--dryrun'
+        from: bucket/build_asset.txt
+        to: 's3://angular-cloudfront-test'
 
             
