--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,11 @@ workflow:
           from: bucket
           overwrite: true
           to: 's3://angular-cloudfront-test/prefix'
+          require:
+            - build
       - aws-s3/copy:
           arguments: '--dryrun'
           from: bucket/build_asset.txt
           to: 's3://angular-cloudfront-test'
-
-            
+          require: 
+            - aws-s3/sync            
