--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,5 @@
 version: 2.1
 
-orbs:
-  aws-s3: circleci/aws-s3@1.0.16
 
 jobs:
   build:
@@ -16,25 +14,25 @@ jobs:
           name: Run Tests
           command: npm test
           
-      - aws-s3/sync:
-          arguments: |
-            --acl public-read \
-            --cache-control "max-age=86400"
-          aws-access-key-id: $AWS_ACCESS_KEY_ID
-          aws-region: $AWS_REGION
-          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
-          from: bucket
-          overwrite: true
-          to: 's3://angular-cloudfront-test/prefix'
+#       - aws-s3/sync:
+#           arguments: |
+#             --acl public-read \
+#             --cache-control "max-age=86400"
+#           aws-access-key-id: $AWS_ACCESS_KEY_ID
+#           aws-region: $AWS_REGION
+#           aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
+#           from: bucket
+#           overwrite: true
+#           to: 's3://angular-cloudfront-test/prefix'
 
-      - aws-s3/copy:
-          arguments: '--dryrun'
-          from: bucket/build_asset.txt
-          to: 's3://angular-cloudfront-test'
+#       - aws-s3/copy:
+#           arguments: '--dryrun'
+#           from: bucket/build_asset.txt
+#           to: 's3://angular-cloudfront-test'
 
 
-workflow:
-  build-deploy:
-    jobs:
-      - build
+# workflow:
+#   build-deploy:
+#     jobs:
+#       - build
                
