--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test --no-watch --no-progress",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "aws-deploy":"aws s3 sync dist/angular/ s3://angular-cloudfront-test"
   },
   "private": true,
   "dependencies": {
